[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/enemy_spawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPos1" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 30 )

[node name="SpawnPos2" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 90 )

[node name="SpawnPos3" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 150 )

[node name="SpawnPos4" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 210 )

[node name="SpawnPos5" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 270 )

[node name="SpawnPos6" type="Position2D" parent="SpawnPoints"]
position = Vector2( 684, 330 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="PathEnemyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PathEnemyTimer" to="." method="_on_path_enemy_timer_timeout"]
